--- a/LandingPage/assets/styles/styles.css
+++ b/LandingPage/assets/styles/styles.css
@@ -3,7 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: Metropolis;
+    font-family: Okra,Helvetica,sans-serif;
     border: none;
 }
 
@@ -114,4 +114,39 @@ header div.searchbox div.input{
 header div.searchbox div.input input{
     width: 100%;
     font-size: 1rem;
+}
+
+/* ---------------header section complete----------*/
+
+section.nearby{
+    min-height: 40vh;
+
+}
+
+section.nearby div.containerh3{
+    text-align: center;
+    width: 90%;
+    padding: 40px 0px;
+    margin: 0px auto;
+}
+
+section.nearby div.containerh3 h3{
+    font-size: 2.2rem;
+    font-weight: unset;
+}
+section.nearby div.box{
+    max-width: 25%;
+    display:flex;
+    border-radius: 10px;
+    padding: 25px 15px;
+    align-items: center;
+    font-size: 1.2rem;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    justify-content: space-between;
+    margin-top: 5%;
+}
+
+section.nearby div.box:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    cursor: pointer;
 }
